@@ -38,6 +38,11 @@ int int_stack_is_empty(const int_stack_t *const stack);
  * element. */
 int int_stack_get_top(const int_stack_t *const stack);
 
+/* Checks element at the top of the stack.  The stack may be empty.  Returns
+ * non-zero if top element is val, otherwise zero is returned.  Always returns
+ * zero for empty stack. */
+int int_stack_top_is(const int_stack_t *const stack, const int val);
+
 /* Set element at the top of the stack.  The stack must contain at least one
  * element. */
 void int_stack_set_top(const int_stack_t *const stack, const int val);
@@ -48,6 +53,10 @@ int int_stack_push(int_stack_t *const stack, const int val);
 /* Removes element from the top of the stack.  The stack must contain at least
  * one element */
 void int_stack_pop(int_stack_t *const stack);
+
+/* Removes element from the top of the stack until first occurrence of the
+ * seq_guard value and that occurrence.  The stack may be empty. */
+void int_stack_pop_seq(int_stack_t *const stack, const int seq_guard);
 
 /* Removes all element from the stack. */
 void int_stack_clear(int_stack_t *const stack);
