@@ -118,6 +118,9 @@
 
 	Fixed view background update on ":highlight Win ...".  Thanks to hofheinz.
 
+	Fixed nesting of if-else statements with file sourcing.  Thanks to
+	filterfalse.
+
 0.7.8-beta to 0.7.8
 
 	Added ga and gA keys to visual mode.  Thanks to geo909.
